# cortix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
chiasm/: EFFECTS_PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
chiasm/demo/: copper.html  copper.ts  cortix-wasm.ts  index.html  main.ts  plasma.html  plasma.ts  starfield.html  starfield.ts  style.css
chiasm/src/: Animation.ts  Effects.ts  Meters.ts  PostProcess.ts  Viz2D.ts  Viz3D.ts  VizWaveform.ts  index.ts  types.ts
cpp/: CMakeLists.txt  build-wasm.sh
cpp/include/cortix/: analyser.h  gammatone.h  scales.h
cpp/src/: wasm_bindings.cpp
cpp/test/: test_scales.cpp
examples/: basic_usage.cpp
include/cortix/: analyser.h  cortix.h
rust/: Cargo.toml
rust/src/: analyser.rs  gammatone.rs  lib.rs  scales.rs
