[package]
name = "cortix"
version = "0.1.0"
edition = "2021"
authors = ["David Lowenfels"]
description = "Perceptual audio spectrum analyser with Gammatone filterbanks"
license = "MIT"
repository = "https://github.com/dfl/cortix"
keywords = ["audio", "dsp", "spectrum", "gammatone", "filterbank"]
categories = ["multimedia::audio", "science"]

[dependencies]

[dev-dependencies]

[features]
default = []

[lib]
name = "cortix"
path = "src/lib.rs"
